# OsuNP

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/api/: mod.rs  np_api.rs
src/error/: error.rs  mod.rs  np_error.rs
src/gosumemory/: launcher.rs  message_parser.rs  mod.rs  status_message.rs
src/logging/: logger.rs
src/systray/: mod.rs  np_tray.rs  systray.rs
src/tosu/: launcher.rs  status_message.rs
