[package]
name = "osu_reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
reqwest = {version = "0.11.13", features = ["json", "blocking"] }