[package]
name = "osu_reporter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { features = ["json", "blocking"] }
tray-icon = "0.5.0"
image = "0.24.6"
winit = "0.28.6"
chrono = "0.4.24"
simple-logging = "2.0.2"
log = "0.4.17"
directories = "5.0.1"
custom_error = "1.9.2"
tokio = {version = "1.28.1" }
native-dialog = "0.6.3"

